Bug 583849 - Use YASM to compile libvpx on Windows. r=ted, a2.0=blocking
UltraBlame original commit: 3056a0e0d97078a10385a0f907dea0ae22f49e9e

--- a/configure.in
+++ b/configure.in
@@ -36018,6 +36018,228 @@ NSS_VERSION
 "
 fi
 fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+Detect
+yasm
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+AC_MSG_CHECKING
+(
+[
+for
+YASM
+assembler
+]
+)
+AC_CHECK_PROGS
+(
+YASM
+yasm
+"
+"
+)
+if
+test
+-
+n
+"
+YASM
+"
+;
+then
+dnl
+Pull
+out
+yasm
+'
+s
+version
+string
+changequote
+(
+)
+_YASM_VER_FILTER
+=
+'
+s
+|
+.
+*
+(
+[
+0
+-
+9
+]
++
+\
+.
+[
+0
+-
+9
+]
++
+\
+.
+[
+0
+-
+9
+]
++
+\
+.
+[
+0
+-
+9
+]
++
+)
+.
+*
+|
+\
+1
+|
+p
+'
+changequote
+(
+[
+]
+)
+YASM_VERSION
+=
+yasm
+-
+-
+version
+|
+sed
+-
+nre
+"
+_YASM_VER_FILTER
+"
+_YASM_MAJOR_VERSION
+=
+echo
+{
+YASM_VERSION
+}
+|
+AWK
+-
+F
+\
+.
+'
+{
+print
+1
+}
+'
+_YASM_MINOR_VERSION
+=
+echo
+{
+YASM_VERSION
+}
+|
+AWK
+-
+F
+\
+.
+'
+{
+print
+2
+}
+'
+_YASM_RELEASE
+=
+echo
+{
+YASM_VERSION
+}
+|
+AWK
+-
+F
+\
+.
+'
+{
+print
+3
+}
+'
+_YASM_BUILD
+=
+echo
+{
+YASM_VERSION
+}
+|
+AWK
+-
+F
+\
+.
+'
+{
+print
+4
+}
+'
+fi
 if
 test
 -
@@ -40450,6 +40672,38 @@ fi
 MOC
 =
 HOST_MOC
+MOZ_ENABLE_QTNETWORK
+=
+PKG_CHECK_MODULES
+(
+_QTNETWORK
+QtNetwork
+>
+=
+4
+.
+7
+MOZ_ENABLE_QTNETWORK
+=
+1
+MOZ_ENABLE_QTNETWORK
+=
+)
+if
+test
+"
+MOZ_ENABLE_QTNETWORK
+"
+;
+then
+MOZ_ENABLE_QTNETWORK
+=
+1
+AC_DEFINE
+(
+MOZ_ENABLE_QTNETWORK
+)
+fi
 fi
 AC_SUBST
 (
@@ -40474,6 +40728,10 @@ MOZ_ENABLE_PHOTON
 AC_SUBST
 (
 MOZ_ENABLE_QT
+)
+AC_SUBST
+(
+MOZ_ENABLE_QTNETWORK
 )
 AC_SUBST
 (
@@ -45902,11 +46160,164 @@ AC_DEFINE
 MOZ_NO_FAST_LOAD
 )
 fi
-AC_SUBST
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Disable
+Raw
+Codecs
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_DISABLE_BOOL
+(
+raw
+[
+-
+-
+disable
+-
+raw
+Disable
+support
+for
+RAW
+media
+]
+MOZ_RAW
+=
+MOZ_RAW
+=
+1
+)
+if
+test
+-
+n
+"
+MOZ_RAW
+"
+;
+then
+AC_DEFINE
 (
 MOZ_RAW
 )
-AC_DEFINE
+MOZ_MEDIA
+=
+1
+fi
+AC_SUBST
 (
 MOZ_RAW
 )
@@ -46417,211 +46828,29 @@ for
 libvpx
 .
 dnl
-For
-Win32
-(
-MSVC
-)
-we
-must
-use
-MASM
-.
-if
-test
-"
-OS_ARCH
-"
-=
-"
-WINNT
-"
--
-a
-"
-CPU_ARCH
-"
-=
-"
-x86
-"
--
-a
--
-z
-"
-GNU_CC
-"
-;
-then
-AC_MSG_CHECKING
-(
-[
-for
-MASM
-assembler
-]
-)
-AC_CHECK_PROGS
-(
-VPX_AS
-ml
-"
-"
-)
-if
-test
--
-n
-"
-VPX_AS
-"
-;
-then
-VPX_X86_ASM
-=
-1
-VPX_AS
-=
-'
-sh
-(
-topsrcdir
-)
-/
-media
-/
-libvpx
-/
-yasm2masm
--
-as
-.
-sh
-'
-else
-AC_MSG_ERROR
-(
-[
-Need
-MASM
-(
-ml
-.
-exe
-)
-in
-order
-to
-assemble
-libvpx
-optimized
-assembly
-.
-Either
-disable
-webm
-(
-reconfigure
-with
--
--
-disable
--
-webm
-)
-or
-install
-MASM
-.
-MASM
-is
-included
-in
-the
-Windows
-7
-SDK
-or
-you
-can
-download
-MASM
-directly
-from
-http
-:
-/
-/
-www
-.
-microsoft
-.
-com
-/
-downloads
-/
-details
-.
-aspx
-?
-familyid
-=
-7a1c9da0
--
-0510
--
-44a2
--
-b042
--
-7ef370530c64
-&
-displaylang
-=
-en
-]
-)
-fi
-else
-dnl
-For
-Darwin
-x86
-Darwin
-x86_64
-Linux
-x86
-and
-WINNT
-x86_64
-dnl
-we
-can
-use
-YASM
-.
-AC_MSG_CHECKING
-(
-[
-for
-YASM
-assembler
-]
-)
-AC_CHECK_PROGS
-(
-VPX_AS
-YASM
-yasm
-"
-"
-)
-dnl
 We
-have
+currently
+require
+yasm
+on
+all
+platforms
+and
+require
+yasm
+1
+.
+1
+.
+0
+on
+Win32
+.
+VPX_AS
+=
 YASM
-see
+dnl
+See
 if
 we
 have
@@ -46634,18 +46863,12 @@ case
 "
 OS_ARCH
 :
-OS_TEST
+CPU_ARCH
 "
 in
 Linux
 :
 x86
-|
-Linux
-:
-i
-?
-86
 )
 VPX_ASFLAGS
 =
@@ -46687,9 +46910,7 @@ VPX_X86_ASM
 ;
 SunOS
 :
-i
-?
-86
+x86
 )
 VPX_ASFLAGS
 =
@@ -46731,9 +46952,7 @@ VPX_X86_ASM
 ;
 Darwin
 :
-i
-?
-86
+x86
 )
 VPX_ASFLAGS
 =
@@ -46805,11 +47024,171 @@ VPX_X86_ASM
 fi
 ;
 ;
+WINNT
+:
+x86
+)
+if
+test
+-
+z
+"
+GNU_CC
+"
+;
+then
+dnl
+Check
+for
+yasm
+1
+.
+1
+or
+greater
+.
+if
+test
+"
+_YASM_MAJOR_VERSION
+"
+-
+gt
+"
+1
+"
+-
+o
+\
+(
+"
+_YASM_MAJOR_VERSION
+"
+-
+eq
+"
+1
+"
+-
+a
+"
+_YASM_MINOR_VERSION
+"
+-
+ge
+"
+1
+"
+\
+)
+;
+then
+VPX_ASFLAGS
+=
+"
+-
+f
+win32
+-
+rnasm
+-
+pnasm
+-
+DPIC
+"
+VPX_X86_ASM
+=
+1
+else
+AC_MSG_ERROR
+(
+[
+yasm
+1
+.
+1
+or
+greater
+is
+required
+to
+build
+libvpx
+on
+Win32
+but
+you
+appear
+to
+have
+version
+_YASM_MAJOR_VERSION
+.
+_YASM_MINOR_VERSION
+.
+Upgrade
+to
+the
+newest
+version
+(
+included
+in
+MozillaBuild
+1
+.
+5
+.
+1
+and
+newer
+)
+or
+configure
+with
+-
+-
+disable
+-
+webm
+(
+which
+disables
+the
+WebM
+video
+format
+)
+.
+See
+https
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+YASM
+for
+more
+details
+.
+]
+)
+fi
+fi
+;
+;
 esac
 if
 test
 "
-COMPILE_ENVIRONMENT
+COMPILE_ENVIROMENT
 "
 -
 a
@@ -46885,11 +47264,6 @@ details
 ]
 )
 fi
-fi
-#
-end
-!
-WINNT_x86_MSVC
 if
 test
 -
@@ -46914,7 +47288,8 @@ assembly
 support
 for
 libvpx
-using
+.
+Using
 unoptimized
 C
 routines
@@ -55864,7 +56239,6 @@ dnl
 =
 dnl
 =
-Disable
 libconic
 dnl
 =
@@ -55923,9 +56297,38 @@ dnl
 =
 =
 =
+dnl
+superseded
+by
+QtNetwork
+starting
+from
+4
+.
+7
 MOZ_ENABLE_LIBCONIC
 =
 1
+if
+test
+-
+n
+"
+MOZ_ENABLE_QT
+"
+;
+then
+if
+test
+"
+MOZ_ENABLE_QTNETWORK
+"
+;
+then
+MOZ_ENABLE_LIBCONIC
+=
+fi
+fi
 MOZ_ARG_DISABLE_BOOL
 (
 libconic
