Bug 276431 Patch 12: Add SVGDocumentWrapper helper-class. r=joe r=roc a=blocking
UltraBlame original commit: 153aab5549269f1abc2fcd05a1600dbb49e56ae7

--- a/modules/libpr0n/src/Makefile.in
+++ b/modules/libpr0n/src/Makefile.in
@@ -448,6 +448,10 @@ RasterImage
 .
 cpp
 \
+SVGDocumentWrapper
+.
+cpp
+\
 VectorImage
 .
 cpp
@@ -500,6 +504,50 @@ modules
 libpr0n
 /
 decoders
+#
+Because
+SVGDocumentWrapper
+.
+cpp
+includes
+"
+nsSVGSVGElement
+.
+h
+"
+LOCAL_INCLUDES
++
+=
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+svg
+/
+content
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+base
+/
+src
+\
+(
+NULL
+)
 include
 (
 topsrcdir
