Bug 276431 Patch 13: Fill in implementation for mozilla::imagelib::VectorImage. r=joe r=roc a=blocking
UltraBlame original commit: c0270004efacf62e8004c2d0145b1af4b5b22f66

--- a/modules/libpr0n/src/Makefile.in
+++ b/modules/libpr0n/src/Makefile.in
@@ -548,6 +548,35 @@ src
 (
 NULL
 )
+#
+Because
+VectorImage
+.
+cpp
+includes
+nsSVGUtils
+.
+h
+and
+nsSVGEffects
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+layout
+/
+svg
+/
+base
+/
+src
 include
 (
 topsrcdir
