--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -456,6 +456,10 @@ browser_HUDServiceTestsAll
 .
 js
 \
+browser_webconsole_bug_585237_line_limit
+.
+js
+\
 browser_webconsole_bug_588967_input_expansion
 .
 js
