Bug 593753 - Update libvpx to 0.9.2. r=cpearce a=blocking
UltraBlame original commit: 012c64c66deff232461020051443cfbb174bacd4

--- a/media/libvpx/Makefile.in
+++ b/media/libvpx/Makefile.in
@@ -950,10 +950,6 @@ reconintra4x4
 .
 c
 \
-segmentation_common
-.
-c
-\
 setupintrarecon
 .
 c
@@ -991,6 +987,10 @@ dequantize
 c
 \
 detokenize
+.
+c
+\
+idct_blk
 .
 c
 \
@@ -1078,6 +1078,14 @@ CSRCS
 +
 =
 \
+idct_blk_mmx
+.
+c
+\
+idct_blk_sse2
+.
+c
+\
 loopfilter_x86
 .
 c
@@ -1102,6 +1110,10 @@ ASFILES
 =
 \
 idctllm_mmx
+.
+asm
+\
+idctllm_sse2
 .
 asm
 \
@@ -1142,6 +1154,10 @@ subpixel_mmx
 asm
 \
 subpixel_sse2
+.
+asm
+\
+subpixel_ssse3
 .
 asm
 \
