Bug 589162 - CSS filtering on the console does not work r=sdwilsh a=betaN
UltraBlame original commit: bccbfe0956bdcc224f731370f939e0a52a95ad53

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -481,6 +481,10 @@ browser_webconsole_netlogging
 .
 js
 \
+browser_webconsole_bug_589162_css_filter
+.
+js
+\
 browser_webconsole_bug_581231_close_button
 .
 js
