Bug 586388 - Provide Select All context menu in HUD Console r=dietrch a=dietrich
UltraBlame original commit: 786aa7928c28b71953114625be283b8c5fbe7976

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -197,6 +197,15 @@ mozilla
 com
 >
 #
+Patrick
+Walton
+<
+pcwalton
+mozilla
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -453,6 +462,10 @@ _BROWSER_TEST_FILES
 =
 \
 browser_HUDServiceTestsAll
+.
+js
+\
+browser_webconsole_bug_586388_select_all
 .
 js
 \
