--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -481,6 +481,10 @@ browser_webconsole_netlogging
 .
 js
 \
+browser_warn_user_about_replaced_api
+.
+js
+\
 browser_webconsole_bug_589162_css_filter
 .
 js
@@ -584,6 +588,16 @@ ISO
 8859
 -
 1
+.
+html
+\
+test
+-
+console
+-
+replaced
+-
+api
 .
 html
 \
