--- a/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
+++ b/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
@@ -452,6 +452,10 @@ browser_unsigned_trigger
 .
 js
 \
+browser_unsigned_trigger_iframe
+.
+js
+\
 browser_whitelist
 .
 js
@@ -697,6 +701,10 @@ enabled
 html
 \
 installtrigger
+.
+html
+\
+installtrigger_frame
 .
 html
 \
