Bug 591516 - 'IndexedDB: Add some UI to prompt for IndexedDB permissions'. r=sicking+gavin.
UltraBlame original commit: b031db65eb692aa73c292bf6d2d480a209609542

--- a/dom/indexedDB/Makefile.in
+++ b/dom/indexedDB/Makefile.in
@@ -454,6 +454,14 @@ AsyncConnectionHelper
 .
 cpp
 \
+CheckPermissionsHelper
+.
+cpp
+\
+CheckQuotaHelper
+.
+cpp
+\
 DatabaseInfo
 .
 cpp
@@ -571,6 +579,18 @@ topsrcdir
 dom
 /
 base
+\
+-
+I
+(
+topsrcdir
+)
+/
+dom
+/
+src
+/
+storage
 \
 -
 I
