Bug 591516 - 'IndexedDB: Add some UI to prompt for IndexedDB permissions'. Tests.
UltraBlame original commit: 882aba67b5d41cd31be3f5ba67f6d374c77ac5c0

--- a/dom/indexedDB/test/Makefile.in
+++ b/dom/indexedDB/test/Makefile.in
@@ -436,7 +436,7 @@ config
 rules
 .
 mk
-_TEST_FILES
+TEST_FILES
 =
 \
 helpers
@@ -570,11 +570,49 @@ html
 (
 NULL
 )
+BROWSER_TEST_FILES
+=
+\
+browserHelpers
+.
+js
+\
+browser_permissionsPrompt
+.
+html
+\
+browser_permissionsPromptAllow
+.
+js
+\
+browser_permissionsPromptDeny
+.
+js
+\
+browser_quotaPrompt
+.
+html
+\
+browser_quotaPromptAllow
+.
+js
+\
+browser_quotaPromptDeny
+.
+js
+\
+head
+.
+js
+\
+(
+NULL
+)
 libs
 :
 :
 (
-_TEST_FILES
+TEST_FILES
 )
 (
 INSTALL
@@ -598,6 +636,38 @@ testing
 mochitest
 /
 tests
+/
+(
+relativesrcdir
+)
+libs
+:
+:
+(
+BROWSER_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
 /
 (
 relativesrcdir
