Bug 594261 - IPC part - Factor out geolocation prompt into something that can be reused. r=chris jones, a=stuart
UltraBlame original commit: caa83e7f002016bd02fb7d7adac0c62a0ea2881f

--- a/dom/ipc/Makefile.in
+++ b/dom/ipc/Makefile.in
@@ -437,6 +437,9 @@ EXPORTS
 TabMessageUtils
 .
 h
+PCOMContentPermissionRequestChild
+.
+h
 EXPORTS_NAMESPACES
 =
 mozilla
@@ -608,19 +611,6 @@ src
 -
 I
 (
-srcdir
-)
-/
-.
-.
-/
-src
-/
-geolocation
-\
--
-I
-(
 topsrcdir
 )
 /
@@ -655,6 +645,19 @@ netwerk
 base
 /
 src
+\
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+src
+/
+geolocation
 \
 (
 NULL
