Bug 573588 - Implement Desktop Notifications r=smaug, a=beltzner
UltraBlame original commit: da8eae9cbf24b434524e5b4e562e5f2b7ded1de0

--- a/dom/interfaces/notification/Makefile.in
+++ b/dom/interfaces/notification/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -145,7 +144,8 @@ is
 mozilla
 .
 org
-code
+build
+system
 .
 #
 #
@@ -157,11 +157,8 @@ the
 Original
 Code
 is
-#
-Netscape
-Communications
-Corporation
-.
+Mozilla
+Foundation
 #
 Portions
 created
@@ -174,7 +171,7 @@ Copyright
 (
 C
 )
-1998
+2010
 #
 the
 Initial
@@ -192,6 +189,15 @@ s
 )
 :
 #
+Doug
+Turner
+<
+dougt
+dougt
+.
+org
+>
+#
 #
 Alternatively
 the
@@ -208,7 +214,6 @@ terms
 of
 #
 either
-of
 the
 GNU
 General
@@ -224,8 +229,8 @@ the
 GPL
 "
 )
-#
 or
+#
 the
 GNU
 Lesser
@@ -387,6 +392,12 @@ DEPTH
 =
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -409,158 +420,29 @@ mk
 MODULE
 =
 dom
-DIRS
+XPIDL_MODULE
 =
+dom_notification
+GRE_MODULE
+=
+1
+XPIDLSRCS
+=
+nsIDOMNavigatorDesktopNotification
+.
+idl
 \
-interfaces
-/
-base
+nsIDOMDesktopNotification
+.
+idl
 \
-interfaces
-/
-canvas
-\
-interfaces
-/
-core
-\
-interfaces
-/
-html
-\
-interfaces
-/
-events
-\
-interfaces
-/
-stylesheets
-\
-interfaces
-/
-views
-\
-interfaces
-/
-sidebar
-\
-interfaces
-/
-css
-\
-interfaces
-/
-traversal
-\
-interfaces
-/
-range
-\
-interfaces
-/
-xbl
-\
-interfaces
-/
-xpath
-\
-interfaces
-/
-load
--
-save
-\
-interfaces
-/
-xul
-\
-interfaces
-/
-storage
-\
-interfaces
-/
-json
-\
-interfaces
-/
-offline
-\
-interfaces
-/
-geolocation
-\
-interfaces
-/
-threads
-\
-interfaces
-/
-notification
+nsIDesktopNotificationPrompt
+.
+idl
 \
 (
 NULL
 )
-ifdef
-MOZ_SVG
-DIRS
-+
-=
-interfaces
-/
-svg
-endif
-ifdef
-MOZ_SMIL
-DIRS
-+
-=
-interfaces
-/
-smil
-endif
-DIRS
-+
-=
-\
-public
-/
-coreEvents
-\
-base
-\
-src
-\
-locales
-\
-plugins
-\
-indexedDB
-\
-system
-\
-(
-NULL
-)
-ifdef
-MOZ_IPC
-DIRS
-+
-=
-\
-ipc
-\
-(
-NULL
-)
-endif
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-tests
-endif
 include
 (
 topsrcdir
