--- a/dom/src/notification/Makefile.in
+++ b/dom/src/notification/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -145,7 +144,8 @@ is
 mozilla
 .
 org
-code
+build
+system
 .
 #
 #
@@ -157,11 +157,8 @@ the
 Original
 Code
 is
-#
-Netscape
-Communications
-Corporation
-.
+Mozilla
+Foundation
 #
 Portions
 created
@@ -174,7 +171,7 @@ Copyright
 (
 C
 )
-1998
+2010
 #
 the
 Initial
@@ -192,6 +189,15 @@ s
 )
 :
 #
+Doug
+Turner
+<
+dougt
+dougt
+.
+org
+>
+#
 #
 Alternatively
 the
@@ -208,7 +214,6 @@ terms
 of
 #
 either
-of
 the
 GNU
 General
@@ -224,8 +229,8 @@ the
 GPL
 "
 )
-#
 or
+#
 the
 GNU
 Lesser
@@ -387,6 +392,12 @@ DEPTH
 =
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -409,158 +420,84 @@ mk
 MODULE
 =
 dom
-DIRS
+LIBRARY_NAME
+=
+jsdomnotification_s
+LIBXUL_LIBRARY
+=
+1
+#
+we
+don
+'
+t
+want
+the
+shared
+lib
+but
+we
+want
+to
+force
+the
+creation
+of
+a
+static
+lib
+.
+FORCE_STATIC_LIB
+=
+1
+CPPSRCS
 =
 \
-interfaces
+nsDesktopNotification
+.
+cpp
+\
+(
+NULL
+)
+EXTRA_DSO_LDOPTS
+=
+\
+(
+MOZ_COMPONENT_LIBS
+)
+\
+(
+NULL
+)
+LOCAL_INCLUDES
+=
+\
+-
+I
+(
+topsrcdir
+)
+/
+dom
 /
 base
 \
-interfaces
+-
+I
+(
+topsrcdir
+)
 /
-canvas
-\
-interfaces
-/
-core
-\
-interfaces
-/
-html
-\
-interfaces
+content
 /
 events
-\
-interfaces
 /
-stylesheets
-\
-interfaces
-/
-views
-\
-interfaces
-/
-sidebar
-\
-interfaces
-/
-css
-\
-interfaces
-/
-traversal
-\
-interfaces
-/
-range
-\
-interfaces
-/
-xbl
-\
-interfaces
-/
-xpath
-\
-interfaces
-/
-load
--
-save
-\
-interfaces
-/
-xul
-\
-interfaces
-/
-storage
-\
-interfaces
-/
-json
-\
-interfaces
-/
-offline
-\
-interfaces
-/
-geolocation
-\
-interfaces
-/
-threads
-\
-interfaces
-/
-notification
-\
-(
-NULL
-)
-ifdef
-MOZ_SVG
-DIRS
-+
-=
-interfaces
-/
-svg
-endif
-ifdef
-MOZ_SMIL
-DIRS
-+
-=
-interfaces
-/
-smil
-endif
-DIRS
-+
-=
-\
-public
-/
-coreEvents
-\
-base
-\
 src
 \
-locales
-\
-plugins
-\
-indexedDB
-\
-system
-\
 (
 NULL
 )
-ifdef
-MOZ_IPC
-DIRS
-+
-=
-\
-ipc
-\
-(
-NULL
-)
-endif
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-tests
-endif
 include
 (
 topsrcdir
@@ -571,3 +508,8 @@ config
 rules
 .
 mk
+DEFINES
++
+=
+-
+D_IMPL_NS_LAYOUT
