Bug 573588 - Implement Desktop Notifications - Tests r=olli, a=beltzner
UltraBlame original commit: 5a9dc4ef07364c48a6d762755bbc20715f12b07b

--- a/dom/tests/mochitest/notification/Makefile.in
+++ b/dom/tests/mochitest/notification/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -145,7 +144,8 @@ is
 mozilla
 .
 org
-code
+build
+system
 .
 #
 #
@@ -157,10 +157,8 @@ the
 Original
 Code
 is
-#
 Mozilla
 Foundation
-.
 #
 Portions
 created
@@ -173,7 +171,7 @@ Copyright
 (
 C
 )
-2007
+2010
 #
 the
 Initial
@@ -191,6 +189,15 @@ s
 )
 :
 #
+Doug
+Turner
+<
+dougt
+dougt
+.
+org
+>
+#
 #
 Alternatively
 the
@@ -207,7 +214,6 @@ terms
 of
 #
 either
-of
 the
 GNU
 General
@@ -223,8 +229,8 @@ the
 GPL
 "
 )
-#
 or
+#
 the
 GNU
 Lesser
@@ -392,6 +398,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -401,6 +410,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+dom
+/
+tests
+/
+mochitest
+/
+notification
 include
 (
 DEPTH
@@ -411,69 +429,6 @@ config
 autoconf
 .
 mk
-DIRS
-+
-=
-\
-dom
--
-level0
-\
-dom
--
-level1
--
-core
-\
-dom
--
-level2
--
-core
-\
-dom
--
-level2
--
-html
-\
-ajax
-\
-bugs
-\
-chrome
-\
-general
-\
-whatwg
-\
-geolocation
-\
-localstorage
-\
-sessionstorage
-\
-storageevent
-\
-(
-NULL
-)
-#
-needs
-IPC
-support
-ifneq
-(
-mobile
-(
-MOZ_BUILD_APP
-)
-)
-DIRS
-+
-=
-notification
-endif
 include
 (
 topsrcdir
@@ -484,3 +439,53 @@ config
 rules
 .
 mk
+_TEST_FILES
+=
+\
+test_basic_notification
+.
+html
+\
+test_basic_notification_click
+.
+html
+\
+notification_common
+.
+js
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
+)
