Bug 583288 (2/2) - Let forms using DELETE and PUT HTTP method when submitting. r=jst,sicking a2.0=sicking
UltraBlame original commit: d2b1c289404dc0d59ae59b0fc93711cbdcaffbbf

--- a/content/html/content/test/Makefile.in
+++ b/content/html/content/test/Makefile.in
@@ -1183,6 +1183,32 @@ test_bug593689
 .
 html
 \
+test_bug583288
+-
+1
+.
+html
+\
+test_bug583288
+-
+2
+.
+html
+\
+test_bug583288
+-
+3
+.
+html
+\
+583288_submit_server
+.
+sjs
+\
+583288_redirect_server
+.
+sjs
+\
 (
 NULL
 )
