Bug 556007 (2/3) - Use values from datalist in autocomplete popups. r=dolske ui-r=limi a2.0=sicking
UltraBlame original commit: e6cc9d708dbfba9a59d234ec98c5343185449139

--- a/toolkit/components/satchel/src/Makefile.in
+++ b/toolkit/components/satchel/src/Makefile.in
@@ -456,9 +456,23 @@ nsFormAutoComplete
 .
 js
 \
+nsInputListAutoComplete
+.
+js
+\
 satchel
 .
 manifest
+\
+(
+NULL
+)
+EXTRA_JS_MODULES
+=
+\
+nsFormAutoCompleteResult
+.
+jsm
 \
 (
 NULL
