Bug 589613 - [SeaMonkey 2.1, mochitest-browser-chrome] browser_Services.js | Services.search exists r/a=gavin
UltraBlame original commit: 2a216165e361c07faf31e4788b404580e9cc7343

--- a/netwerk/base/public/Makefile.in
+++ b/netwerk/base/public/Makefile.in
@@ -799,13 +799,18 @@ nsIRedirectResultListener
 .
 idl
 \
-nsIBrowserSearchService
-.
-idl
-\
 (
 NULL
 )
+ifdef
+MOZ_TOOLKIT_SEARCH
+XPIDLSRCS
++
+=
+nsIBrowserSearchService
+.
+idl
+endif
 EXPORTS
 =
 \
