Bug 594734 Use $(TAR) instead of tar for content/canvas/test/webgl r=bjacob a=testing file only
UltraBlame original commit: 7e3d3cc884f74cdce2a49efd3a4b5e01dfa7bedc

--- a/content/canvas/test/webgl/Makefile.in
+++ b/content/canvas/test/webgl/Makefile.in
@@ -483,7 +483,9 @@ tests
 (
 relativesrcdir
 )
-tar
+(
+TAR
+)
 cC
 (
 srcdir
@@ -496,7 +498,9 @@ conformance
 more
 \
 |
-tar
+(
+TAR
+)
 xC
 (
 DEPTH
