Bug 591325 Fix regression due to relativesrcdir landing in xpchsell test, continued cleanup in chrome tets r=ctalbert a=NPOTB
UltraBlame original commit: 47c6a53ffd8cbc5f9c610a39008e2d2893148339

--- a/testing/mochitest/tests/SimpleTest/Makefile.in
+++ b/testing/mochitest/tests/SimpleTest/Makefile.in
@@ -479,6 +479,24 @@ PluginUtils
 js
 \
 (
+DEPTH
+)
+/
+toolkit
+/
+content
+/
+tests
+/
+browser
+/
+common
+/
+mockObjects
+.
+js
+\
+(
 NULL
 )
 libs
