--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -197,6 +197,15 @@ mozilla
 com
 >
 #
+Patrick
+Walton
+<
+pcwalton
+mozilla
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -457,6 +466,10 @@ browser_HUDServiceTestsAll
 js
 \
 browser_webconsole_bug_585237_line_limit
+.
+js
+\
+browser_webconsole_bug_586388_select_all
 .
 js
 \
