--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -481,6 +481,10 @@ browser_webconsole_netlogging
 .
 js
 \
+browser_webconsole_bug_593003_iframe_wrong_hud
+.
+js
+\
 browser_webconsole_bug_581231_close_button
 .
 js
@@ -580,6 +584,36 @@ ISO
 8859
 -
 1
+.
+html
+\
+test
+-
+bug
+-
+593003
+-
+iframe
+-
+wrong
+-
+hud
+.
+html
+\
+test
+-
+bug
+-
+593003
+-
+iframe
+-
+wrong
+-
+hud
+-
+iframe
 .
 html
 \
