--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -477,6 +477,10 @@ browser_webconsole_bug_588967_input_expansion
 .
 js
 \
+browser_webconsole_bug_580454_timestamp_l10n
+.
+js
+\
 browser_webconsole_netlogging
 .
 js
