--- a/xulrunner/installer/Makefile.in
+++ b/xulrunner/installer/Makefile.in
@@ -793,6 +793,27 @@ config
 version
 )
 endif
+MOZ_XUL_LINK
+=
+-
+lxpcomglue_s
+-
+lxul
+-
+lxpcom
+ifdef
+JS_SHARED_LIBRARY
+MOZ_JS_LINK
+=
+-
+lmozjs
+else
+MOZ_JS_LINK
+=
+(
+MOZ_XUL_LINK
+)
+endif
 (
 warning
 FULL_NSPR_CFLAGS
@@ -998,6 +1019,36 @@ NSPR_VERSION
 |
 "
 >
+-
+e
+"
+s
+|
+%
+MOZ_XUL_LINK
+%
+|
+(
+MOZ_XUL_LINK
+)
+|
+"
+\
+-
+e
+"
+s
+|
+%
+MOZ_JS_LINK
+%
+|
+(
+MOZ_JS_LINK
+)
+|
+"
+\
 chmod
 644
 install
