Bug 594583 - 'IndexedDB: Add some UI to clear IndexedDB databases'. r=sicking+gavin. a=beta6blocking.
UltraBlame original commit: 65c2aba970cddfc08daaf4e0482e1937b2e9d889

--- a/dom/indexedDB/Makefile.in
+++ b/dom/indexedDB/Makefile.in
@@ -502,6 +502,10 @@ IDBFactory
 .
 cpp
 \
+IndexedDatabaseManager
+.
+cpp
+\
 LazyIdleThread
 .
 cpp
@@ -553,6 +557,10 @@ IDBTransaction
 h
 \
 IndexedDatabase
+.
+h
+\
+IndexedDatabaseManager
 .
 h
 \
@@ -701,6 +709,10 @@ nsIIDBTransactionEvent
 idl
 \
 nsIIDBFactory
+.
+idl
+\
+nsIIndexedDatabaseManager
 .
 idl
 \
