Backed out changeset 100bcacdbf45 due to orange (bug 578880).
UltraBlame original commit: d8674093f3558f6cfc862352dec321af9f8e4d7a

--- a/configure.in
+++ b/configure.in
@@ -16924,17 +16924,86 @@ print
 3
 }
 '
+case
+GCC_VERSION
+in
+4
+.
+1
+.
+*
+|
+4
+.
+2
+.
+*
+|
+4
+.
+5
+.
+*
+)
+#
+-
+Os
+is
+broken
+on
+gcc
+4
+.
+1
+.
+x
+4
+.
+2
+.
+x
+4
+.
+5
+.
+x
+we
+need
+to
+tweak
+it
+to
+get
+good
+results
+.
+MOZ_OPTIMIZE_SIZE_TWEAK
+=
+"
+-
+finline
+-
+limit
+=
+50
+"
+esac
 MOZ_OPTIMIZE_FLAGS
 =
 "
 -
-O3
+Os
+-
+freorder
+-
+blocks
 -
 fomit
 -
 frame
 -
 pointer
+MOZ_OPTIMIZE_SIZE_TWEAK
 "
 MOZ_DEBUG_FLAGS
 =
@@ -58543,6 +58612,10 @@ MOZ_OPTIMIZE_FLAGS
 AC_SUBST
 (
 MOZ_OPTIMIZE_LDFLAGS
+)
+AC_SUBST
+(
+MOZ_OPTIMIZE_SIZE_TWEAK
 )
 dnl
 =
