--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -14884,17 +14884,92 @@ print
 3
 }
 '
+case
+GCC_VERSION
+in
+4
+.
+1
+.
+*
+|
+4
+.
+2
+.
+*
+|
+4
+.
+5
+.
+*
+)
+#
+-
+Os
+is
+broken
+on
+gcc
+4
+.
+1
+.
+x
+4
+.
+2
+.
+x
+4
+.
+5
+.
+x
+we
+need
+to
+tweak
+it
+to
+get
+good
+results
+.
+MOZ_OPTIMIZE_SIZE_TWEAK
+=
+"
+-
+finline
+-
+limit
+=
+50
+"
+esac
 MOZ_OPTIMIZE_FLAGS
 =
 "
 -
-O3
+Os
+-
+freorder
+-
+blocks
+-
+fno
+-
+reorder
+-
+functions
 -
 fomit
 -
 frame
 -
 pointer
+MOZ_OPTIMIZE_SIZE_TWEAK
 "
 MOZ_DEBUG_FLAGS
 =
@@ -32588,6 +32663,10 @@ MOZ_OPTIMIZE_FLAGS
 AC_SUBST
 (
 MOZ_OPTIMIZE_LDFLAGS
+)
+AC_SUBST
+(
+MOZ_OPTIMIZE_SIZE_TWEAK
 )
 dnl
 =
