Bug 589667 test.  Make sure no one breaks my layout-debug again.  r=ted, a=npob
UltraBlame original commit: a293b6b40cece8a2fed0121bdef9c2b8eba72878

--- a/layout/tools/layout-debug/tests/Makefile.in
+++ b/layout/tools/layout-debug/tests/Makefile.in
@@ -1,18 +1,13 @@
 #
 vim
 :
-set
+noexpandtab
 ts
 =
 8
 sw
 =
 8
-sts
-=
-8
-noet
-:
 #
 #
 *
@@ -157,9 +152,9 @@ The
 Original
 Code
 is
-mozilla
+httpd
 .
-org
+js
 code
 .
 #
@@ -173,9 +168,16 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Jeff
+Walden
+<
+jwalden
++
+code
+mit
+.
+edu
+>
 .
 #
 Portions
@@ -189,7 +191,7 @@ Copyright
 (
 C
 )
-1998
+2006
 #
 the
 Initial
@@ -407,6 +409,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -416,6 +421,17 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+layout
+/
+tools
+/
+layout
+-
+debug
+/
+tests
 include
 (
 DEPTH
@@ -426,98 +442,9 @@ config
 autoconf
 .
 mk
-MODULE
+XPCSHELL_TESTS
 =
-layout_debug
-DIRS
-=
-src
-ui
-tests
-#
-If
-we
-have
-a
-XULRunner
--
-enabled
-tree
-then
-build
-as
-a
-standalone
-XUL
-app
-.
-ifdef
-MOZ_XULRUNNER
-export
-XPI_NAME
-=
-layoutdebug
-PREF_JS_EXPORTS
-=
-(
-srcdir
-)
-/
-layoutdebug
--
-prefs
-.
-js
-DIST_FILES
-=
-application
-.
-ini
-DIST_CHROME_FILES
-=
-chrome
-.
-manifest
-BUILD_ID
-=
-(
-shell
-(
-PYTHON
-)
-(
-topsrcdir
-)
-/
-config
-/
-printconfigsetting
-.
-py
-(
-LIBXUL_DIST
-)
-/
-bin
-/
-platform
-.
-ini
-Build
-BuildID
-)
-DEFINES
-+
-=
--
-DBUILD_ID
-=
-(
-BUILD_ID
-)
-endif
-#
-MOZ_XULRUNNER
+unit
 include
 (
 topsrcdir
