Bug 533038 - 7. Extensions should not be extracted into the profile directory, but installed/stored as XPI file, r=Mossop a=blocking-beta6
UltraBlame original commit: dd0de36fc6f47d78342122f4a7192648d983a303

--- a/toolkit/mozapps/extensions/test/Makefile.in
+++ b/toolkit/mozapps/extensions/test/Makefile.in
@@ -487,6 +487,10 @@ XPCSHELL_TESTS
 \
 xpcshell
 \
+xpcshell
+-
+unpack
+\
 (
 NULL
 )
@@ -570,3 +574,20 @@ xpi
 done
 \
 fi
+cp
+-
+pPR
+(
+TESTROOT
+)
+/
+xpcshell
+/
+.
+(
+TESTROOT
+)
+/
+xpcshell
+-
+unpack
