Bug 592879 - Detect and warn users that the current window.console API is third party r=dietrich a=beta6+
UltraBlame original commit: da5a386a0346d01d58ee7c0d16fdd055e8eb0007

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -493,6 +493,10 @@ browser_webconsole_bug_581231_close_button
 .
 js
 \
+browser_warn_user_about_replaced_api
+.
+js
+\
 (
 NULL
 )
@@ -618,6 +622,16 @@ wrong
 hud
 -
 iframe
+.
+html
+\
+test
+-
+console
+-
+replaced
+-
+api
 .
 html
 \
