Bug 593328 - Only build hudservice for Firefox. r=khuey a2.0=noptb
UltraBlame original commit: 2779c55431a482ef827a7a9820dba1192259cf37

--- a/toolkit/components/console/Makefile.in
+++ b/toolkit/components/console/Makefile.in
@@ -423,6 +423,13 @@ jsconsole
 clhandler
 .
 manifest
+ifeq
+(
+browser
+(
+MOZ_BUILD_APP
+)
+)
 PARALLEL_DIRS
 =
 hudservice
@@ -430,6 +437,7 @@ hudservice
 (
 NULL
 )
+endif
 include
 (
 topsrcdir
