Bug 588312 - Set video.currentTime to seek time when seek starts - r=kinetik a=blocking2.0
UltraBlame original commit: 5c303535a850e2ea8859568ebba00b98642bb67f

--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -977,6 +977,10 @@ test_standalone
 .
 html
 \
+test_timeupdate_seek
+.
+html
+\
 test_timeupdate_small_files
 .
 html
@@ -1076,59 +1080,6 @@ now
 test_audioDocumentTitle
 .
 html
-ifdef
-MOZ_OGG
-ifneq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-#
-Disabled
-on
-windows
-until
-we
-figure
-out
-the
-random
-failures
-.
-#
-When
-this
-is
-fixed
-make
-it
-backend
--
-independent
-please
-.
-#
-See
-bug
-475369
-and
-bug
-526323
-_TEST_FILES
-+
-=
-\
-test_timeupdate3
-.
-html
-\
-(
-NULL
-)
-endif
-endif
 #
 sample
 files
