[JAEGER] Re-imported nitro assembler.
UltraBlame original commit: dd0b2f4d5299f1fbae2b284c504a81d666217297

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -576,15 +576,43 @@ O3
 fstrict
 -
 aliasing
+(
+MOZ_OPTIMIZE_SIZE_TWEAK
+)
+ifeq
+(
+(
+OS_ARCH
+)
+Linux
+)
+#
+TODO
+:
+move
+this
+up
+a
+line
+when
+we
+fix
+OS
+X
+(
+bug
+517832
+)
+MODULE_OPTIMIZE_FLAGS
++
+=
 -
 fomit
 -
 frame
 -
 pointer
-(
-MOZ_OPTIMIZE_SIZE_TWEAK
-)
+endif
 #
 Special
 optimization
@@ -625,10 +653,40 @@ OS_ARCH
 )
 WINNT
 )
+ifdef
+WINCE
+#
+-
+GL
+is
+not
+supported
+on
+windows
+mobile
+while
+we
+are
+using
+the
+arm
+-
+wince
+-
+link
+command
 MODULE_OPTIMIZE_FLAGS
 =
 -
 O2
+else
+MODULE_OPTIMIZE_FLAGS
+=
+-
+O2
+-
+GL
+endif
 endif
 endif
 #
@@ -719,16 +777,10 @@ the
 static
 library
 .
-ifdef
-JS_SHARED_LIBRARY
 FORCE_SHARED_LIB
 =
 1
-endif
 FORCE_STATIC_LIB
-=
-1
-DIST_INSTALL
 =
 1
 VPATH
@@ -799,10 +851,6 @@ jsgcchunk
 .
 cpp
 \
-jsgcstats
-.
-cpp
-\
 jshash
 .
 cpp
@@ -831,10 +879,6 @@ jsmath
 .
 cpp
 \
-jsnativestack
-.
-cpp
-\
 jsnum
 .
 cpp
@@ -855,10 +899,6 @@ jsparse
 .
 cpp
 \
-jsproxy
-.
-cpp
-\
 jsprf
 .
 cpp
@@ -868,10 +908,6 @@ jspropertycache
 cpp
 \
 jspropertytree
-.
-cpp
-\
-jsreflect
 .
 cpp
 \
@@ -904,10 +940,6 @@ jstypedarray
 cpp
 \
 jsutil
-.
-cpp
-\
-jswrapper
 .
 cpp
 \
@@ -1025,14 +1057,6 @@ jsgc
 .
 h
 \
-jsgcchunk
-.
-h
-\
-jsgcstats
-.
-h
-\
 jshash
 .
 h
@@ -1089,10 +1113,6 @@ jsparse
 .
 h
 \
-jsproxy
-.
-h
-\
 jsprf
 .
 h
@@ -1121,10 +1141,6 @@ jspubtd
 .
 h
 \
-jsreflect
-.
-h
-\
 jsregexp
 .
 h
@@ -1146,10 +1162,6 @@ jsscriptinlines
 h
 \
 jsstaticcheck
-.
-h
-\
-jsstdint
 .
 h
 \
@@ -1193,27 +1205,11 @@ jsversion
 .
 h
 \
-jswrapper
-.
-h
-\
 jsxdrapi
 .
 h
 \
 jsxml
-.
-h
-\
-jsval
-.
-h
-\
-jsvalue
-.
-h
-\
-prmjtime
 .
 h
 \
@@ -1385,68 +1381,8 @@ endif
 endif
 #
 ENABLE_TRACEJIT
-ifeq
-(
-(
-TARGET_CPU
-)
-powerpc
-)
-VPATH
-+
-=
-(
-srcdir
-)
-/
-assembler
-\
-(
-srcdir
-)
-/
-assembler
-/
-wtf
-\
-(
-srcdir
-)
-/
-yarr
-/
-pcre
-\
-(
-NULL
-)
-CPPSRCS
-+
-=
-pcre_compile
-.
-cpp
-\
-pcre_exec
-.
-cpp
-\
-pcre_tables
-.
-cpp
-\
-pcre_xclass
-.
-cpp
-\
-pcre_ucp_searchfuncs
-.
-cpp
-\
-(
-NULL
-)
-else
+ifdef
+ENABLE_METHODJIT
 #
 #
 #
@@ -1541,40 +1477,6 @@ srcdir
 )
 /
 methodjit
-\
-(
-srcdir
-)
-/
-yarr
-\
-(
-srcdir
-)
-/
-yarr
-/
-yarr
-\
-(
-srcdir
-)
-/
-yarr
-/
-pcre
-\
-(
-srcdir
-)
-/
-yarr
-/
-wtf
-\
-(
-NONE
-)
 CPPSRCS
 +
 =
@@ -1598,49 +1500,41 @@ ARMAssembler
 .
 cpp
 \
-Logging
-.
-cpp
-\
 MacroAssemblerARM
 .
 cpp
 \
-MacroAssemblerX86Common
-.
-cpp
-\
-RegexCompiler
-.
-cpp
-\
-RegexJIT
-.
-cpp
-\
-pcre_compile
-.
-cpp
-\
-pcre_exec
-.
-cpp
-\
-pcre_tables
-.
-cpp
-\
-pcre_xclass
-.
-cpp
-\
-pcre_ucp_searchfuncs
-.
-cpp
-\
 (
-NONE
+NULL
 )
+#
+Compiler
+.
+cpp
+\
+CodeGenerator
+.
+cpp
+\
+PICStubCompiler
+.
+cpp
+\
+MethodJIT
+.
+cpp
+\
+Stubs
+.
+cpp
+\
+BytecodeAnalyzer
+.
+cpp
+\
+Logging
+.
+cpp
 ifeq
 (
 86
@@ -1659,6 +1553,20 @@ x86_64
 TARGET_CPU
 )
 )
+ifeq
+(
+(
+OS_ARCH
+)
+WINNT
+)
+ASFILES
++
+=
+TrampolineMasmX64
+.
+asm
+endif
 #
 CPPSRCS
 +
@@ -1781,10 +1689,6 @@ libffi
 /
 include
 \
--
-I
-.
-\
 (
 NULL
 )
@@ -1862,89 +1766,6 @@ h
 NULL
 )
 endif
-#
-PerfMeasurement
-is
-available
-regardless
-of
-low
--
-level
-support
-for
-it
-;
-#
-it
-just
-doesn
-'
-t
-necessarily
-do
-anything
-useful
-.
-There
-is
-one
-#
-implementation
-source
-file
-per
-supported
-operating
-system
-plus
-a
-stub
-#
-for
-unsupported
-OSes
-plus
-the
-Javascript
-wrapper
-.
-VPATH
-+
-=
-(
-srcdir
-)
-/
-perf
-INSTALLED_HEADERS
-+
-=
-jsperf
-.
-h
-CPPSRCS
-+
-=
-jsperf
-.
-cpp
-ifdef
-HAVE_LINUX_PERF_EVENT_H
-CPPSRCS
-+
-=
-pm_linux
-.
-cpp
-else
-CPPSRCS
-+
-=
-pm_stub
-.
-cpp
-endif
 ifeq
 (
 (
@@ -2014,6 +1835,30 @@ EXTRA_DSO_LDOPTS
 (
 NSPR_LIBS
 )
+ifdef
+MOZ_MEMORY
+ifeq
+(
+(
+OS_ARCH
+)
+SunOS
+)
+EXTRA_DSO_LDOPTS
++
+=
+(
+call
+EXPAND_LIBNAME_PATH
+jemalloc
+(
+DIST
+)
+/
+lib
+)
+endif
+endif
 ifndef
 BUILD_OPT
 MOCHAFILE
@@ -2742,62 +2587,6 @@ DEFINES
 =
 -
 DEXPORT_JS_API
-#
-Some
-platforms
-that
-have
-stdint
-.
-h
-include
-it
-in
-system
-headers
-.
-So
-#
-to
-reliably
-get
-limit
-macros
-defined
-we
-'
-d
-always
-have
-to
-define
-the
-#
-one
-below
-before
-including
-any
-header
-but
-that
-'
-s
-obscure
-and
-#
-fragile
-so
-we
-do
-it
-here
-.
-DEFINES
-+
-=
--
-D__STDC_LIMIT_MACROS
 INCLUDES
 +
 =
@@ -2857,29 +2646,6 @@ DEFINES
 =
 -
 DJS_HAS_CTYPES
-DEFINES
-+
-=
--
-DDLL_PREFIX
-=
-\
-"
-(
-DLL_PREFIX
-)
-\
-"
--
-DDLL_SUFFIX
-=
-\
-"
-(
-DLL_SUFFIX
-)
-\
-"
 endif
 ifdef
 JS_NO_THIN_LOCKS
@@ -3430,9 +3196,6 @@ jsfun
 .
 o
 jsinterp
-.
-o
-jsreflect
 .
 o
 jsregexp
@@ -4743,28 +4506,111 @@ trace
 h
 endif
 ifdef
-ENABLE_TRACEJIT
+GNU_CC
+ifndef
+CROSS_COMPILE
+ifndef
+QEMU_CANT_RUN_JS_SHELL
 #
-Imacro
-compilation
+If
+we
+don
+'
+t
+have
+run
+-
+mozilla
 .
+sh
+*
+and
+*
+we
+'
+re
+linking
+against
+NSPR
+we
+don
+'
+t
+#
+know
+how
+to
+run
+the
+JS
+binary
+.
+Oh
+well
+imacro_asm
+.
+js
+:
+imacro_asm
+.
+js
+.
+in
+jsopcode
+.
+tbl
 (
-CURDIR
+CC
 )
-/
+-
+c
+-
+x
+c
+-
+E
+-
+P
+-
+I
+(
+srcdir
+)
+<
+>
+GARBAGE
++
+=
 imacros
 .
 c
 .
-out
-:
-(
-srcdir
-)
-/
+tmp
 imacro_asm
 .
-py
+js
+ifneq
+(
+(
+wildcard
+(
+RUN_TEST_PROGRAM
+)
+)
+(
+if
+(
+NSPR_LIBS
+)
+1
+)
+)
+libs
+:
+:
+imacro_asm
+.
+js
 (
 srcdir
 )
@@ -4773,7 +4619,20 @@ imacros
 .
 jsasm
 (
-PYTHON
+wildcard
+(
+RUN_TEST_PROGRAM
+)
+)
+(
+DIST
+)
+/
+bin
+/
+js
+(
+BIN_SUFFIX
 )
 <
 (
@@ -4783,8 +4642,22 @@ srcdir
 imacros
 .
 jsasm
+>
+imacros
+.
+c
+.
+tmp
+cmp
+-
+s
+imacros
+.
+c
+.
+tmp
 (
-CURDIR
+srcdir
 )
 /
 imacros
@@ -4792,17 +4665,86 @@ imacros
 c
 .
 out
+|
+|
+\
 (
-addsuffix
+echo
+"
+imacros
 .
+c
+.
+out
+is
+out
+of
+date
+.
+Run
+'
+make
+update
+-
+imacros
+'
+to
+copy
+it
+to
+your
+source
+tree
+.
+"
+;
+diff
+-
+U
+4
 (
-OBJ_SUFFIX
+srcdir
 )
-jstracer
+/
+imacros
+.
+c
+.
+out
+imacros
+.
+c
+.
+out
+;
+exit
+1
 )
+echo
+"
+imacros
+.
+c
+.
+out
+is
+up
+to
+date
+"
+update
+-
+imacros
 :
+imacros
+.
+c
+.
+tmp
+cp
+<
 (
-CURDIR
+srcdir
 )
 /
 imacros
@@ -5094,7 +5036,13 @@ PHONY
 :
 update
 -
+imacros
+update
+-
 nanojit
+endif
+endif
+endif
 endif
 #
 #
@@ -5152,6 +5100,54 @@ Nitro
 assembler
 #
 #
+#
+FIXME
+figure
+out
+where
+INCLUDES
+is
+being
+reset
+and
+move
+this
+#
+#
+backwards
+to
+that
+point
+.
+Ideally
+merge
+with
+the
+rest
+of
+the
+#
+#
+Nitro
+assembler
+stuff
+far
+above
+.
+ifdef
+ENABLE_METHODJIT
+INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+assembler
+#
+#
 Needed
 to
 "
@@ -5191,34 +5187,109 @@ CXXFLAGS
 +
 =
 -
-DUSE_SYSTEM_MALLOC
+DENABLE_ASSEMBLER
 =
 1
 -
-DENABLE_ASSEMBLER
+DUSE_SYSTEM_MALLOC
 =
 1
 -
 DENABLE_JIT
 =
 1
-INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
+#
+Build
+a
+standalone
+test
+program
+that
+exercises
+the
 assembler
--
-I
+#
+sources
+a
+bit
+.
+TESTMAIN_OBJS
+=
+\
+Assertions
+.
 (
-srcdir
+OBJ_SUFFIX
 )
-/
-yarr
+\
+ExecutableAllocatorPosix
+.
+(
+OBJ_SUFFIX
+)
+\
+ExecutableAllocatorWin
+.
+(
+OBJ_SUFFIX
+)
+\
+ExecutableAllocator
+.
+(
+OBJ_SUFFIX
+)
+\
+ARMAssembler
+.
+(
+OBJ_SUFFIX
+)
+\
+MacroAssemblerARM
+.
+(
+OBJ_SUFFIX
+)
+\
+TestMain
+.
+(
+OBJ_SUFFIX
+)
+\
+jsutil
+.
+(
+OBJ_SUFFIX
+)
+\
+jslog2
+.
+(
+OBJ_SUFFIX
+)
+TestMain
+(
+HOST_BIN_SUFFIX
+)
+:
+(
+TESTMAIN_OBJS
+)
+(
+CXX
+)
+-
+o
+TestMain
+(
+HOST_BIN_SUFFIX
+)
+(
+TESTMAIN_OBJS
+)
+endif
 #
 #
 END
