--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -534,6 +534,9 @@ MOZ_DEBUG
 MOZ_DEBUG_SYMBOLS
 =
 MOZ_DEBUG_SYMBOLS
+MOZ_PROFILE_MODULES
+=
+MOZ_PROFILE_MODULES
 MOZ_DEBUG_ENABLE_DEFS
 =
 MOZ_DEBUG_ENABLE_DEFS
@@ -549,6 +552,9 @@ MOZ_DEBUG_LDFLAGS
 MOZ_EXTENSIONS
 =
 MOZ_EXTENSIONS
+MOZ_IMG_DECODERS
+=
+MOZ_IMG_DECODERS
 MOZ_IMG_ENCODERS
 =
 MOZ_IMG_ENCODERS
@@ -1013,6 +1019,9 @@ PYTHON
 RANLIB
 =
 RANLIB
+WHOAMI
+=
+WHOAMI
 UNZIP
 =
 UNZIP
@@ -1170,12 +1179,6 @@ MDDEPDIR
 :
 =
 MDDEPDIR
-CC_WRAPPER
-=
-CC_WRAPPER
-CXX_WRAPPER
-=
-CXX_WRAPPER
 MOZ_DEMANGLE_SYMBOLS
 =
 MOZ_DEMANGLE_SYMBOLS
@@ -1319,15 +1322,12 @@ WRAP_SYSTEM_INCLUDES
 ENABLE_TRACEJIT
 =
 ENABLE_TRACEJIT
+ENABLE_METHODJIT
+=
+ENABLE_METHODJIT
 NANOJIT_ARCH
 =
 NANOJIT_ARCH
 HAVE_ARM_SIMD
 =
 HAVE_ARM_SIMD
-JS_SHARED_LIBRARY
-=
-JS_SHARED_LIBRARY
-HAVE_LINUX_PERF_EVENT_H
-=
-HAVE_LINUX_PERF_EVENT_H
