--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -19997,6 +19997,10 @@ AC_DEFINE
 (
 JS_CPU_X86
 )
+AC_DEFINE
+(
+JS_32BIT
+)
 ;
 ;
 x86_64
@@ -20017,6 +20021,10 @@ AC_DEFINE
 (
 JS_CPU_X64
 )
+AC_DEFINE
+(
+JS_64BIT
+)
 ;
 ;
 arm
@@ -20036,6 +20044,10 @@ ENABLE_METHODJIT
 AC_DEFINE
 (
 JS_CPU_ARM
+)
+AC_DEFINE
+(
+JS_32BIT
 )
 ;
 ;
