[JAEGER] Start of stub-call compiler; sub-classed MacroAssembler into mjit::Assembler.
UltraBlame original commit: 0b9cfe5ef098f9ad8a87b36e535f9e8df4fe99d8

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1524,7 +1524,7 @@ Logging
 .
 cpp
 \
-Stubs
+StubCalls
 .
 cpp
 \
@@ -1541,6 +1541,10 @@ FrameState
 cpp
 \
 FastOps
+.
+cpp
+\
+StubCompiler
 .
 cpp
 \
