[JAEGER] Merge from fatval branch.
UltraBlame original commit: e315d1ab94af4203e98c6aecefe7310e88033515

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -879,6 +879,10 @@ jsmath
 .
 cpp
 \
+jsnativestack
+.
+cpp
+\
 jsnum
 .
 cpp
@@ -896,6 +900,10 @@ jsopcode
 cpp
 \
 jsparse
+.
+cpp
+\
+jsproxy
 .
 cpp
 \
@@ -940,6 +948,10 @@ jstypedarray
 cpp
 \
 jsutil
+.
+cpp
+\
+jswrapper
 .
 cpp
 \
@@ -1057,6 +1069,10 @@ jsgc
 .
 h
 \
+jsgcchunk
+.
+h
+\
 jshash
 .
 h
@@ -1110,6 +1126,10 @@ jsotypes
 h
 \
 jsparse
+.
+h
+\
+jsproxy
 .
 h
 \
@@ -1205,11 +1225,19 @@ jsversion
 .
 h
 \
+jswrapper
+.
+h
+\
 jsxdrapi
 .
 h
 \
 jsxml
+.
+h
+\
+prmjtime
 .
 h
 \
@@ -1706,6 +1734,10 @@ libffi
 /
 include
 \
+-
+I
+.
+\
 (
 NULL
 )
@@ -1852,30 +1884,6 @@ EXTRA_DSO_LDOPTS
 (
 NSPR_LIBS
 )
-ifdef
-MOZ_MEMORY
-ifeq
-(
-(
-OS_ARCH
-)
-SunOS
-)
-EXTRA_DSO_LDOPTS
-+
-=
-(
-call
-EXPAND_LIBNAME_PATH
-jemalloc
-(
-DIST
-)
-/
-lib
-)
-endif
-endif
 ifndef
 BUILD_OPT
 MOCHAFILE
@@ -4523,111 +4531,28 @@ trace
 h
 endif
 ifdef
-GNU_CC
-ifndef
-CROSS_COMPILE
-ifndef
-QEMU_CANT_RUN_JS_SHELL
+ENABLE_TRACEJIT
 #
-If
-we
-don
-'
-t
-have
-run
--
-mozilla
+Imacro
+compilation
 .
-sh
-*
-and
-*
-we
-'
-re
-linking
-against
-NSPR
-we
-don
-'
-t
-#
-know
-how
-to
-run
-the
-JS
-binary
-.
-Oh
-well
-imacro_asm
-.
-js
-:
-imacro_asm
-.
-js
-.
-in
-jsopcode
-.
-tbl
 (
-CC
+CURDIR
 )
--
-c
--
-x
-c
--
-E
--
-P
--
-I
-(
-srcdir
-)
-<
->
-GARBAGE
-+
-=
+/
 imacros
 .
 c
 .
-tmp
+out
+:
+(
+srcdir
+)
+/
 imacro_asm
 .
-js
-ifneq
-(
-(
-wildcard
-(
-RUN_TEST_PROGRAM
-)
-)
-(
-if
-(
-NSPR_LIBS
-)
-1
-)
-)
-libs
-:
-:
-imacro_asm
-.
-js
+py
 (
 srcdir
 )
@@ -4636,20 +4561,7 @@ imacros
 .
 jsasm
 (
-wildcard
-(
-RUN_TEST_PROGRAM
-)
-)
-(
-DIST
-)
-/
-bin
-/
-js
-(
-BIN_SUFFIX
+PYTHON
 )
 <
 (
@@ -4659,22 +4571,8 @@ srcdir
 imacros
 .
 jsasm
->
-imacros
-.
-c
-.
-tmp
-cmp
--
-s
-imacros
-.
-c
-.
-tmp
 (
-srcdir
+CURDIR
 )
 /
 imacros
@@ -4682,86 +4580,17 @@ imacros
 c
 .
 out
-|
-|
-\
 (
-echo
-"
-imacros
+addsuffix
 .
-c
-.
-out
-is
-out
-of
-date
-.
-Run
-'
-make
-update
--
-imacros
-'
-to
-copy
-it
-to
-your
-source
-tree
-.
-"
-;
-diff
--
-U
-4
 (
-srcdir
+OBJ_SUFFIX
 )
-/
-imacros
-.
-c
-.
-out
-imacros
-.
-c
-.
-out
-;
-exit
-1
+jstracer
 )
-echo
-"
-imacros
-.
-c
-.
-out
-is
-up
-to
-date
-"
-update
--
-imacros
 :
-imacros
-.
-c
-.
-tmp
-cp
-<
 (
-srcdir
+CURDIR
 )
 /
 imacros
@@ -5053,13 +4882,7 @@ PHONY
 :
 update
 -
-imacros
-update
--
 nanojit
-endif
-endif
-endif
 endif
 #
 #
