--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -2622,14 +2622,6 @@ enums
 fno
 -
 exceptions
--
-march
-=
-armv5te
--
-mthumb
--
-interwork
 CFLAGS
 "
 CXXFLAGS
@@ -2665,14 +2657,6 @@ enums
 fno
 -
 exceptions
--
-march
-=
-armv5te
--
-mthumb
--
-interwork
 CXXFLAGS
 "
 LDFLAGS
@@ -2774,6 +2758,44 @@ HOST_LDFLAGS
 "
 "
 fi
+#
+save
+these
+for
+libffi
+'
+s
+subconfigure
+#
+which
+doesn
+'
+t
+know
+how
+to
+figure
+this
+stuff
+out
+on
+its
+own
+ANDROID_CFLAGS
+=
+"
+CFLAGS
+"
+ANDROID_CPPFLAGS
+=
+"
+CPPFLAGS
+"
+ANDROID_LDFLAGS
+=
+"
+LDFLAGS
+"
 AC_DEFINE
 (
 ANDROID
@@ -8678,6 +8700,8 @@ gtk2
 MOZ_ENABLE_POSTSCRIPT
 =
 1
+MOZ_THUMB2
+=
 if
 test
 -
@@ -10656,9 +10680,6 @@ INTEL_CC
 "
 ;
 then
-_IGNORE_LONG_LONG_WARNINGS
-=
-1
 _WARNINGS_CFLAGS
 =
 "
@@ -10668,9 +10689,6 @@ _WARNINGS_CFLAGS
 -
 W
 "
-else
-_IGNORE_LONG_LONG_WARNINGS
-=
 fi
 _DEFINES_CFLAGS
 =
@@ -13577,8 +13595,6 @@ shlicc2
 )
 _PEDANTIC
 =
-_IGNORE_LONG_LONG_WARNINGS
-=
 case
 OS_RELEASE
 in
@@ -15959,6 +15975,28 @@ IMPORT_LIB_SUFFIX
 dll
 .
 a
+GCC_VERSION
+=
+CC
+-
+v
+2
+>
+&
+1
+|
+awk
+'
+/
+^
+gcc
+version
+/
+{
+print
+3
+}
+'
 else
 TARGET_COMPILER_ABI
 =
@@ -16175,6 +16213,22 @@ Fd
 (
 COMPILE_PDBFILE
 )
+"
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+wd4800
+"
+#
+disable
+warning
+"
+forcing
+value
+to
+bool
 "
 LIBS
 =
@@ -31271,6 +31325,337 @@ dnl
 =
 dnl
 =
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Enable
+building
+the
+Thumb2
+instruction
+set
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+thumb2
+[
+-
+-
+enable
+-
+thumb2
+Enable
+Thumb2
+instruction
+set
+]
+MOZ_THUMB2
+=
+1
+)
+if
+test
+-
+n
+"
+MOZ_THUMB2
+"
+;
+then
+case
+"
+target_cpu
+"
+in
+arm
+*
+)
+if
+test
+"
+GNU_CC
+"
+;
+then
+CFLAGS
+=
+"
+CFLAGS
+-
+march
+=
+armv7
+-
+a
+-
+mthumb
+-
+Wa
+-
+march
+=
+armv7
+-
+a
+-
+Wa
+-
+mthumb
+"
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+march
+=
+armv7
+-
+a
+-
+mthumb
+-
+Wa
+-
+march
+=
+armv7
+-
+a
+-
+Wa
+-
+mthumb
+"
+ASFLAGS
+=
+"
+ASFLAGS
+-
+march
+=
+armv7
+-
+a
+-
+mthumb
+"
+else
+AC_MSG_ERROR
+(
+[
+-
+-
+enable
+-
+thumb2
+is
+not
+supported
+for
+non
+-
+GNU
+toolchains
+]
+)
+fi
+;
+;
+*
+)
+AC_MSG_ERROR
+(
+[
+-
+-
+enable
+-
+thumb2
+is
+not
+supported
+for
+non
+-
+ARM
+CPU
+architectures
+]
+)
+;
+;
+esac
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
 Localization
 dnl
 =
@@ -33738,10 +34123,12 @@ of
 case
 "
 {
-target_os
+target
 }
 "
 in
+*
+-
 darwin
 *
 )
@@ -33751,6 +34138,8 @@ MOZ_MEMORY_DARWIN
 )
 ;
 ;
+*
+-
 *
 freebsd
 *
@@ -33762,6 +34151,8 @@ MOZ_MEMORY_BSD
 ;
 ;
 *
+-
+*
 linux
 *
 )
@@ -33771,6 +34162,8 @@ MOZ_MEMORY_LINUX
 )
 ;
 ;
+*
+-
 netbsd
 *
 )
@@ -33780,6 +34173,8 @@ MOZ_MEMORY_BSD
 )
 ;
 ;
+*
+-
 solaris
 *
 )
@@ -33789,15 +34184,23 @@ MOZ_MEMORY_SOLARIS
 )
 ;
 ;
+*
+-
 msvc
 *
 |
+*
+-
 mks
 *
 |
+*
+-
 cygwin
 *
 |
+*
+-
 mingw
 *
 )
@@ -33818,8 +34221,12 @@ MOZ_MEMORY_LDFLAGS
 ;
 ;
 *
+-
+*
 wince
 |
+*
+-
 *
 winmo
 )
@@ -33830,6 +34237,21 @@ MOZ_MEMORY_WINCE
 AC_DEFINE
 (
 MOZ_MEMORY_WINDOWS
+)
+;
+;
+*
+-
+android
+*
+)
+AC_DEFINE
+(
+MOZ_MEMORY_LINUX
+)
+AC_DEFINE
+(
+MOZ_MEMORY_ANDROID
 )
 ;
 ;
@@ -34048,6 +34470,22 @@ Wl
 wrap
 -
 Wl
+calloc
+-
+Wl
+-
+-
+wrap
+-
+Wl
+valloc
+-
+Wl
+-
+-
+wrap
+-
+Wl
 free
 -
 Wl
@@ -34057,6 +34495,14 @@ wrap
 -
 Wl
 realloc
+-
+Wl
+-
+-
+wrap
+-
+Wl
+memalign
 -
 Wl
 -
@@ -34121,6 +34567,30 @@ wrap
 -
 Wl
 PR_Realloc
+-
+Wl
+-
+-
+wrap
+-
+Wl
+strdup
+-
+Wl
+-
+-
+wrap
+-
+Wl
+strndup
+-
+Wl
+-
+-
+wrap
+-
+Wl
+posix_memalign
 "
 MKSHLIB
 =
@@ -34133,6 +34603,9 @@ DSO_LDOPTS
 )
 (
 WRAP_MALLOC_CFLAGS
+)
+(
+WRAP_MALLOC_LIB
 )
 -
 o
@@ -37936,159 +38409,6 @@ no
 )
 fi
 dnl
-pass
--
-Wno
--
-long
--
-long
-to
-the
-compiler
-MOZ_ARG_ENABLE_BOOL
-(
-long
--
-long
--
-warning
-[
--
--
-enable
--
-long
--
-long
--
-warning
-Warn
-about
-use
-of
-non
--
-ANSI
-long
-long
-type
-]
-_IGNORE_LONG_LONG_WARNINGS
-=
-_IGNORE_LONG_LONG_WARNINGS
-=
-1
-)
-if
-test
-"
-_IGNORE_LONG_LONG_WARNINGS
-"
-;
-then
-_SAVE_CFLAGS
-=
-"
-CFLAGS
-"
-CFLAGS
-=
-"
-CFLAGS
-{
-_COMPILER_PREFIX
-}
--
-Wno
--
-long
--
-long
-"
-AC_MSG_CHECKING
-(
-[
-whether
-compiler
-supports
--
-Wno
--
-long
--
-long
-]
-)
-AC_TRY_COMPILE
-(
-[
-]
-[
-return
-(
-0
-)
-;
-]
-[
-_WARNINGS_CFLAGS
-=
-"
-{
-_WARNINGS_CFLAGS
-}
-{
-_COMPILER_PREFIX
-}
--
-Wno
--
-long
--
-long
-"
-_WARNINGS_CXXFLAGS
-=
-"
-{
-_WARNINGS_CXXFLAGS
-}
-{
-_COMPILER_PREFIX
-}
--
-Wno
--
-long
--
-long
-"
-result
-=
-"
-yes
-"
-]
-result
-=
-"
-no
-"
-)
-AC_MSG_RESULT
-(
-[
-result
-]
-)
-CFLAGS
-=
-"
-_SAVE_CFLAGS
-"
-fi
-dnl
 =
 =
 =
@@ -38310,6 +38630,10 @@ CFLAGS
 fprofile
 -
 generate
+-
+fprofile
+-
+correction
 "
 AC_MSG_CHECKING
 (
@@ -38384,6 +38708,22 @@ PROFILE_USE_CFLAGS
 fprofile
 -
 use
+-
+fprofile
+-
+correction
+-
+Wcoverage
+-
+mismatch
+-
+freorder
+-
+blocks
+-
+and
+-
+partition
 "
 PROFILE_USE_LDFLAGS
 =
@@ -38772,6 +39112,15 @@ _COMPILER_PREFIX
 }
 -
 pedantic
+{
+_COMPILER_PREFIX
+}
+-
+Wno
+-
+long
+-
+long
 "
 AC_MSG_CHECKING
 (
@@ -38847,6 +39196,15 @@ _COMPILER_PREFIX
 }
 -
 pedantic
+{
+_COMPILER_PREFIX
+}
+-
+Wno
+-
+long
+-
+long
 "
 _WARNINGS_CXXFLAGS
 =
@@ -38859,6 +39217,15 @@ _COMPILER_PREFIX
 }
 -
 pedantic
+{
+_COMPILER_PREFIX
+}
+-
+Wno
+-
+long
+-
+long
 "
 ;
 ;
@@ -41895,10 +42262,6 @@ MOZ_VTUNE
 )
 AC_SUBST
 (
-MOZ_XPCTOOLS
-)
-AC_SUBST
-(
 MOZ_JSLOADER
 )
 AC_SUBST
@@ -42723,6 +43086,10 @@ Darwin
 "
 ;
 then
+AC_DEFINE
+(
+XP_MACOSX
+)
 AC_DEFINE
 (
 XP_UNIX
@@ -44217,6 +44584,63 @@ CC
 ;
 ;
 *
+-
+android
+*
+)
+CFLAGS
+=
+"
+ANDROID_CFLAGS
+"
+CPPFLAGS
+=
+"
+ANDROID_CPPFLAGS
+"
+LDFLAGS
+=
+"
+ANDROID_LDFLAGS
+"
+export
+CC
+CPP
+LD
+CPPFLAGS
+CFLAGS
+LDFLAGS
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+build
+=
+build
+-
+-
+host
+=
+{
+target_cpu
+}
+-
+{
+target_os
+}
+HOST_CC
+=
+\
+"
+HOST_CC
+\
+"
+"
+;
+;
+*
 )
 ac_configure_args
 =
@@ -44434,6 +44858,26 @@ Zomf
 AR
 =
 emxomfar
+"
+fi
+if
+test
+-
+n
+"
+MOZ_THUMB2
+"
+;
+then
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+enable
+-
+thumb2
 "
 fi
 #
