--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -20056,6 +20056,17 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 i386
+ENABLE_METHODJIT
+=
+1
+AC_DEFINE
+(
+JS_CPU_X86
+)
+AC_DEFINE
+(
+JS_32BIT
+)
 ;
 ;
 x86_64
@@ -20069,6 +20080,17 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 X64
+ENABLE_METHODJIT
+=
+1
+AC_DEFINE
+(
+JS_CPU_X64
+)
+AC_DEFINE
+(
+JS_64BIT
+)
 ;
 ;
 arm
@@ -20082,6 +20104,17 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 ARM
+ENABLE_METHODJIT
+=
+1
+AC_DEFINE
+(
+JS_CPU_ARM
+)
+AC_DEFINE
+(
+JS_32BIT
+)
 ;
 ;
 sparc
@@ -20095,9 +20128,30 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 Sparc
+AC_DEFINE
+(
+JS_CPU_SPARC
+)
 ;
 ;
 esac
+MOZ_ARG_DISABLE_BOOL
+(
+methodjit
+[
+-
+-
+disable
+-
+methodjit
+Disable
+method
+JIT
+support
+]
+ENABLE_METHODJIT
+=
+)
 MOZ_ARG_DISABLE_BOOL
 (
 tracejit
@@ -20115,6 +20169,62 @@ support
 ENABLE_TRACEJIT
 =
 )
+MOZ_ARG_ENABLE_BOOL
+(
+methodjit
+-
+spew
+[
+-
+-
+enable
+-
+methodjit
+-
+spew
+Enable
+method
+JIT
+spew
+support
+]
+ENABLE_METHODJIT_SPEW
+=
+1
+ENABLE_METHODJIT_SPEW
+=
+)
+AC_SUBST
+(
+ENABLE_METHODJIT
+)
+if
+test
+"
+ENABLE_METHODJIT
+"
+;
+then
+AC_DEFINE
+(
+JS_METHODJIT
+)
+else
+ENABLE_TRACEJIT
+=
+fi
+if
+test
+"
+ENABLE_METHODJIT_SPEW
+"
+;
+then
+AC_DEFINE
+(
+JS_METHODJIT_SPEW
+)
+fi
 if
 test
 "
