--- a/js/src/xpconnect/src/Makefile.in
+++ b/js/src/xpconnect/src/Makefile.in
@@ -708,17 +708,6 @@ srcdir
 .
 .
 /
-wrappers
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
 loader
 \
 -
@@ -799,33 +788,9 @@ I
 topsrcdir
 )
 /
-content
-/
-svg
-/
-content
-/
-src
-\
--
-I
-(
-topsrcdir
-)
-/
 layout
 /
 style
-\
--
-I
-(
-topsrcdir
-)
-/
-layout
-/
-base
 \
 (
 NULL
@@ -868,27 +833,6 @@ LIB_SUFFIX
 NULL
 )
 endif
-SHARED_LIBRARY_LIBS
-+
-=
-\
-.
-.
-/
-wrappers
-/
-(
-LIB_PREFIX
-)
-xpcwrappers_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-NULL
-)
 include
 (
 topsrcdir
@@ -1020,13 +964,44 @@ CONFIG
 (
 NULL
 )
+#
+Disable
+traceable
+natives
+because
+(
+a
+)
+many
+of
+them
+return
+jsvals
+which
+is
+#
+hard
+to
+support
+now
+and
+(
+b
+)
+we
+can
+call
+the
+basic
+versions
+from
+trace
+now
+#
+anyway
+.
 ENABLE_TRACEABLE_FLAGS
 =
--
--
-enable
--
-traceables
 endif
 #
 ENABLE_JIT
@@ -1403,8 +1378,3 @@ idl
 parser
 /
 cache
-DEFINES
-+
-=
--
-D_IMPL_NS_LAYOUT
