--- a/js/src/xpconnect/src/Makefile.in
+++ b/js/src/xpconnect/src/Makefile.in
@@ -964,44 +964,13 @@ CONFIG
 (
 NULL
 )
-#
-Disable
-traceable
-natives
-because
-(
-a
-)
-many
-of
-them
-return
-jsvals
-which
-is
-#
-hard
-to
-support
-now
-and
-(
-b
-)
-we
-can
-call
-the
-basic
-versions
-from
-trace
-now
-#
-anyway
-.
 ENABLE_TRACEABLE_FLAGS
 =
+-
+-
+enable
+-
+traceables
 endif
 #
 ENABLE_JIT
