Bug 575205 - JM: Make JaegerMonkey work on Solaris x86/x64 with Sun Studio 12. r=dvander
UltraBlame original commit: 2b690bf412012e20a87eb30b59621210a6100971

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1632,6 +1632,15 @@ TrampolineMasmX64
 .
 asm
 endif
+ifdef
+SOLARIS_SUNPRO_CXX
+ASFILES
++
+=
+TrampolineSUNWX64
+.
+s
+endif
 #
 CPPSRCS
 +
@@ -1647,6 +1656,15 @@ CPPSRCS
 only_on_x86
 .
 cpp
+ifdef
+SOLARIS_SUNPRO_CXX
+ASFILES
++
+=
+TrampolineSUNWX86
+.
+s
+endif
 endif
 endif
 ifeq
